<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_match"
        android:icon="@drawable/ic_trophy"
        android:title="@string/title_match" />

    <item
        android:id="@+id/navigation_team"
        android:icon="@drawable/ic_ball_black_24dp"
        android:title="@string/title_team" />

    <item
        android:id="@+id/navigation_favorite"
        android:icon="@drawable/ic_star_border_white_24dp"
        android:title="@string/title_favorite" />
</menu>