<resources>
    <string name="app_name">JadwalBalbalan</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_match">Match</string>
    <string name="title_team">Team</string>
    <string name="title_favorite">Favorite</string>

    <string name="title_prev_match">Prev Match</string>
    <string name="title_next_match">Next Match</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_search">Search...</string>
    <string name="hint_search_match">Search Match...</string>
    <string name="hint_search_team">Search Team...</string>
    <string name="title_overview">Overview</string>
    <string name="title_player">Player</string>
    <string name="title_player_detail">Player Detail</string>
    <string name="title_match_detail">Match Detail</string>
    <string name="title_team_detail">Team Detail</string>
</resources>
